ScoreIncreases fixed - prep to reimplement feats

--- a/src/main/resources/templates/app/character_creator/creator_2.html
+++ b/src/main/resources/templates/app/character_creator/creator_2.html
@@ -169,7 +169,7 @@
                                 </thead>
                             </table>
 <!--                            TODO pass hidden ID to result in order to make this creator work-->
-                            <input type="hidden" th:name="charId" th:value="${charId}">
+                            <input type="hidden" th:value="${charId}" th:name="id">
                             <button type="submit" class="btn btn-primary">Next</button>
                         </form>
                     </div>
