--- a/src/main/resources/templates/app/character_creator/creator_4.html
+++ b/src/main/resources/templates/app/character_creator/creator_4.html
@@ -30,7 +30,7 @@
                             <!--SPACE FOR FEAT BUTTON-->
                             <div>
                                 <div class="form-floating mb-3">
-
+                                <!--    TODO !skip feat select until you have proper idea!   -->
                                 <a th:href="@{'/app/add-feat/' + ${charId} + '/' + ${iter.index + 1}}"
                                    class="btn btn-primary rounded-pill m-2">
                                     Choose Feat
