--- a/src/main/resources/templates/app/fragments/javascript.html
+++ b/src/main/resources/templates/app/fragments/javascript.html
@@ -2,16 +2,16 @@
 <div th:fragment="javascript">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/resources/lib/chart/chart.min.js"></script>
-    <script src="/resources/lib/easing/easing.min.js"></script>
-    <script src="/resources/lib/waypoints/waypoints.min.js"></script>
-    <script src="/resources/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="/resources/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="/resources/lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="/resources/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script th:src="@{/resources/lib/chart/chart.min.js}"></script>
+    <script th:src="@{/resources/lib/easing/easing.min.js}"></script>
+    <script th:src="@{/resources/lib/waypoints/waypoints.min.js}"></script>
+    <script th:src="@{/resources/lib/owlcarousel/owl.carousel.min.js}"></script>
+    <script th:src="@{/resources/lib/tempusdominus/js/moment.min.js}"></script>
+    <script th:src="@{/resources/lib/tempusdominus/js/moment-timezone.min.js}"></script>
+    <script th:src="@{/resources/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js}"></script>
 
     <!-- Template Javascript -->
-    <script src="/resources/js/main.js"></script>
-    <script src="/resources/js/diceRoller.js"></script>
-    <script src="/resources/js/elementDisplayer.js"></script>
+    <script th:src="@{/resources/js/main.js}"></script>
+    <script th:src="@{/resources/js/diceRoller.js}"></script>
+    <script th:src="@{/resources/js/elementDisplayer.js}"></script>
 </div>
