--- a/src/main/resources/templates/app/character_select/select.html
+++ b/src/main/resources/templates/app/character_select/select.html
@@ -28,7 +28,7 @@
                                     <span>Level:&nbsp;</span>
                                     <span th:text="${character.stats.level}"></span><br/>
                                     <span>Name:&nbsp;</span>
-                                    <span th:text="${character.race.name}"></span><br/>
+                                    <span th:text="${character.name}"></span><br/>
                                     <!-- Dynamic Class / Subclass display when class feature is implemented -->
                                     <span>Class: Rogue / Scout</span>
 
