--- a/src/main/resources/templates/app/character_creator/creator_1.html
+++ b/src/main/resources/templates/app/character_creator/creator_1.html
@@ -31,12 +31,14 @@
                                 <!-- !character name input! -->
                                 <input th:field="*{name}" class="form-control" id="floatingInput" placeholder="Character Name"/>
                                 <label for="floatingInput">Character Name</label>
+                                <span class="has-error" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
                             </div>
 
                             <div class="form-floating mb-3">
                                 <!-- !character age input! -->
                                 <input th:field="*{age}" type="number" class="form-control" id="floatingInput" placeholder="Character Age"/>
                                 <label for="floatingInput">Character Age</label>
+                                <span class="has-error" th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></span>
                             </div>
 
                             <div class="form-floating mb-3">
@@ -44,6 +46,7 @@
                                 <textarea th:field="*{backstory}" class="form-control" placeholder="Backstory"
                                                id="floatingTextarea" style="height: 300px;"></textarea>
                                 <label for="floatingTextarea">Backstory</label>
+                                <span class="has-error" th:if="${#fields.hasErrors('backstory')}" th:errors="*{backstory}"></span>
                             </div>
 
                             <div class="form-floating mb-3">
