--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,47 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml"
+>
 
-<head>
-    <title>DragonDice - Home Page</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
-    <!-- Favicon -->
-    <link rel="icon" th:href="@{/resources/img/favicon.ico}"/>
-
-    <!-- Google Web Fonts -->
-    <link href="https://fonts.googleapis.com" rel="preconnect"/>
-    <link href="https://fonts.gstatic.com" rel="preconnect"/>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@500;700&display=swap"
-          rel="stylesheet"/>
-
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
-
-    <!-- Libraries Stylesheet -->
-    <link th:href="@{/resources/lib/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet"/>
-    <link th:href="@{/resources/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css}" rel="stylesheet"/>
-    <!-- Customized Bootstrap Stylesheet -->
-    <link th:href="@{/resources/css/bootstrap.min.css}" rel="stylesheet"/>
-    <!-- Template Stylesheet -->
-    <link th:href="@{/resources/css/style.css}" rel="stylesheet"/>
-</head>
+<head th:replace="/_fragments/header :: head"></head>
 
 <body>
 <div class="container-fluid position-relative d-flex p-0">
-    <!-- Spinner Start -->
-    <div id="spinner"
-         class="show bg-dark position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-    </div>
-    <!-- Spinner End -->
 
+    <div th:replace="/_fragments/spinner :: spinner"></div>
 
     <!-- Sign In Start -->
     <div class="container-fluid">
@@ -69,7 +37,7 @@
                         </div>
 
                         <div class="d-flex align-items-center justify-content-between mb-4">
-                            <a href="#">Forgot Password</a>
+                            <a href="/password-recovery/forgot-password">Forgot Password?</a>
                         </div>
 
                         <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign In</button>
@@ -87,19 +55,8 @@
     <!-- Sign In End -->
 </div>
 
-<!-- JavaScript Libraries -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script th:src="@{resources/lib/chart/chart.min.js}"></script>
-<script th:src="@{resources/lib/easing/easing.min.js}"></script>
-<script th:src="@{resources/lib/waypoints/waypoints.min.js}"></script>
-<script th:src="@{resources/lib/owlcarousel/owl.carousel.min.js}"></script>
-<script th:src="@{resources/lib/tempusdominus/js/moment.min.js}"></script>
-<script th:src="@{resources/lib/tempusdominus/js/moment-timezone.min.js}"></script>
-<script th:src="@{resources/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js}"></script>
+<div th:replace="/_fragments/javascript :: javascript"></div>
 
-<!-- Template Javascript -->
-<script th:src="@{/resources/js/main.js}"></script>
 </body>
 
 </html>
